nav: removed fixed position and spacing div

--- a/src/containers/nav/Nav.scss
+++ b/src/containers/nav/Nav.scss
@@ -1,15 +1,7 @@
-$nav-height: 145px;
-
-.nav-spacer{
-  height: $nav-height;
-}
-
 .nav-bar{
-  position: fixed;
   background-color: #228B22;
   width: 100%;
   padding: 20px;
-  height: $nav-height;
   box-sizing: border-box;
 
   h2{
